refactor: enhance code clarity and consistency across multiple files