@@ -1,16 +1,17 @@
 package cloud.xcan.angus.spec.runner;
 
-import static cloud.xcan.angus.spec.SpecConstant.DEFAULT_ENCODING;
-
 import cloud.xcan.angus.spec.utils.file.filter.JarFileFilter;
 import java.io.File;
-import java.io.UnsupportedEncodingException;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLDecoder;
-import java.util.LinkedList;
+import java.nio.charset.StandardCharsets;
+import java.security.CodeSource;
+import java.security.ProtectionDomain;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -22,41 +23,52 @@ public final class ClassInvoker {
   private static final String JAR_DIRECTORY;
 
   static {
-    // System.setProperty("java.awt.headless", "true");
-    StringBuffer classpath = new StringBuffer();
+    JAR_DIRECTORY = resolveJarDirectory();
 
-    File self = new File(
-        ClassInvoker.class.getProtectionDomain().getCodeSource().getLocation().getFile());
-    JAR_DIRECTORY = decodePath(self.getParent());
-    // Add standard jar locations to initial classpath
+    StringBuilder classpath = new StringBuilder(256);
     List<URL> jars = buildUpdatedClassPath(JAR_DIRECTORY, classpath);
-    String cp = classpath.toString();
-    System.setProperty(JAVA_CLASS_PATH, cp);
+    System.setProperty(JAVA_CLASS_PATH, classpath.toString());
 
-    URL[] urls = jars.toArray(new URL[0]);
-    URLClassLoader loader = new URLClassLoader(urls);
+    URL[] urls = jars.toArray(URL[]::new);
+    URLClassLoader loader = new URLClassLoader(urls, ClassLoader.getSystemClassLoader());
     Thread.currentThread().setContextClassLoader(loader);
   }
 
-  private static String decodePath(String path) {
+  private static String resolveJarDirectory() {
     try {
-      return URLDecoder.decode(path, DEFAULT_ENCODING);
-    } catch (UnsupportedEncodingException e) {
-      e.printStackTrace(System.out);
-      return path;
+      ProtectionDomain pd = ClassInvoker.class.getProtectionDomain();
+      CodeSource cs = pd == null ? null : pd.getCodeSource();
+      URL location = cs == null ? null : cs.getLocation();
+      if (location != null) {
+        File self = new File(decodePath(location.getFile()));
+        String parent = self.getParent();
+        if (parent != null) {
+          return parent;
+        }
+        return self.getAbsolutePath();
+      }
+    } catch (Exception e) {
+      e.printStackTrace(System.err);
     }
+    return System.getProperty("user.dir", ".");
   }
 
-  private static List<URL> buildUpdatedClassPath(String jarDir, StringBuffer classpath) {
-    List<URL> jars = new LinkedList<>();
-    List<File> libDirs = new LinkedList<File>();
-    File file = new File(jarDir);
-    libDirs.add(file.getAbsoluteFile());
+  private static String decodePath(String path) {
+    if (path == null || path.isEmpty()) {
+      return path == null ? "" : path;
+    }
+    return URLDecoder.decode(path, StandardCharsets.UTF_8);
+  }
 
-    // add lib subdir
-    file = new File(jarDir + File.separator + "ext");
-    if (file.exists()) {
-      libDirs.add(file.getAbsoluteFile());
+  private static List<URL> buildUpdatedClassPath(String jarDir, StringBuilder classpath) {
+    List<URL> jars = new ArrayList<>();
+    List<File> libDirs = new ArrayList<>(2);
+    File base = new File(jarDir).getAbsoluteFile();
+    libDirs.add(base);
+
+    File ext = new File(jarDir, "ext");
+    if (ext.isDirectory()) {
+      libDirs.add(ext.getAbsoluteFile());
     }
 
     for (File libDir : libDirs) {
@@ -69,13 +81,14 @@ public final class ClassInvoker {
     return jars;
   }
 
-  private static void addFiles(File[] libJars, List<URL> jars, StringBuffer classpath) {
+  private static void addFiles(File[] libJars, List<URL> jars, StringBuilder classpath) {
     for (File libJar : libJars) {
       try {
-        String s = libJar.getPath();
-        jars.add(new File(s).toURI().toURL());
-        classpath.append(File.pathSeparator);
-        classpath.append(s);
+        jars.add(libJar.toURI().toURL());
+        if (classpath.length() > 0) {
+          classpath.append(File.pathSeparatorChar);
+        }
+        classpath.append(libJar.getPath());
       } catch (MalformedURLException e) {
         e.printStackTrace(System.err);
       }
@@ -83,42 +96,48 @@ public final class ClassInvoker {
   }
 
   /**
-   * Get the directory where CMD jar is placed. This is the absolute path name.
-   *
-   * @return the directory where JMeter is installed.
+   * Get the directory where this module's jar (or classes directory) resides; absolute path.
    */
   public static String getJarLocation() {
     return JAR_DIRECTORY;
   }
 
   /**
-   * The main program which actually runs Cli or Agent.
+   * Reflectively loads a class, constructs it with the no-arg constructor, and invokes a method.
    *
-   * @param clazz                invoke class
-   * @param methodName           the method name of invoke class
-   * @param args                 the arguments of method
-   * @param methodParameterTypes the method parameter types
-   * @throws Throwable class not found or invoke exception
+   * @param clazz                fully qualified class name
+   * @param methodName           method name
+   * @param args                 method arguments (may be {@code null} if the method has no parameters)
+   * @param methodParameterTypes parameter types of the method
+   * @return the method return value
+   * @throws Throwable the error from loading, construction, or invocation (for
+   *                   {@link InvocationTargetException}, the target exception is rethrown)
    */
   public static Object invoke(String clazz, String methodName,
       Object[] args, Class<?>... methodParameterTypes) throws Throwable {
     try {
-      Class<?> initialClass;
-      // make it independent - get class name & method from props/manifest
-      initialClass = Thread.currentThread().getContextClassLoader().loadClass(clazz);
-      Object instance = initialClass.newInstance();
+      Class<?> initialClass =
+          Thread.currentThread().getContextClassLoader().loadClass(clazz);
+      Object instance = initialClass.getDeclaredConstructor().newInstance();
       Method startup = initialClass.getMethod(methodName, methodParameterTypes);
       return startup.invoke(instance, args);
+    } catch (InvocationTargetException e) {
+      Throwable cause = e.getCause();
+      if (cause != null) {
+        System.err.println("ERROR: " + cause);
+        System.err.println("Home directory was detected as: " + JAR_DIRECTORY);
+        throw cause;
+      }
+      System.err.println("Home directory was detected as: " + JAR_DIRECTORY);
+      throw e;
     } catch (Throwable e) {
       if (e.getCause() != null) {
-        System.err.println("ERROR: " + e.getCause().toString());
+        System.err.println("ERROR: " + e.getCause());
         System.err.println("Home directory was detected as: " + JAR_DIRECTORY);
         throw e.getCause();
-      } else {
-        System.err.println("Home directory was detected as: " + JAR_DIRECTORY);
-        throw e;
       }
+      System.err.println("Home directory was detected as: " + JAR_DIRECTORY);
+      throw e;
     }
   }
-
 }
